--- a/app/src/main/res/layout/activity_loginpage.xml
+++ b/app/src/main/res/layout/activity_loginpage.xml
@@ -6,144 +6,175 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     tools:context=".PaymentsActivity">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="96dp"
-        android:layout_marginEnd="77dp"
-        android:layout_marginBottom="557dp"
-        android:src="@drawable/logo" />
-
-    <Button
-        android:id="@+id/sign"
-        android:layout_width="137dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="201dp"
-        android:layout_marginBottom="453dp"
-        android:background="@drawable/rountbutt"
-        android:text="Sign Up"
-        android:textSize="18sp"
-        android:textColor="@color/lightblack"
-        android:textStyle="bold"
-        app:backgroundTint="@color/black" />
-
-    <Button
-        android:layout_width="137dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="210dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="453dp"
-        android:background="@drawable/rountbutt"
-        android:text="Login"
-        android:textSize="18sp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        app:backgroundTint="#2C2E2E"/>
-
-    <LinearLayout
-        android:id="@+id/layout"
-        android:layout_width="wrap_content"
-        android:layout_height="260dp"
-        android:layout_alignBottom="@+id/sign"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="270dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="-252dp"
-        android:background="#2C2E2E"
-        android:orientation="vertical">
-
-        <EditText
-            android:layout_width="310dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="25dp"
-            android:background="@drawable/curvedbutton"
-            android:hint="Email"
-            android:paddingLeft="15dp"
-            android:textColor="@color/white"
-            android:textColorHint="#D8CACA"
-            android:textSize="18sp" />
-
-        <EditText
-            android:layout_width="310dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/curvedbutton"
-            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
-            android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
-            android:hint="Password"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:textColorHint="#D8CACA"
-            android:textSize="18sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginTop="10dp"
-            android:text="FORGOT PASSWORD ?"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            android:textStyle="bold"/>
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:src="@drawable/logo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.092" />
 
         <Button
-            android:layout_width="310dp"
+            android:id="@+id/sign"
+            android:layout_width="160dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/curvedbutton"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/rountbutt"
+            android:text="Sign Up"
+            android:textColor="@color/lightblack"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:backgroundTint="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.159"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.305"
+            tools:ignore="MissingConstraints" />
+
+        <Button
+            android:layout_width="160dp"
+            android:layout_height="50dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/rountbutt"
             android:text="Login"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            app:backgroundTint="#1AA6B8" />
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:backgroundTint="#2C2E2E"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.796"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.305"
+            tools:ignore="MissingConstraints" />
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/layout"
+            android:layout_width="320dp"
+            android:layout_height="262dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:background="#2C2E2E"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.439"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.546"
+            tools:ignore="MissingConstraints">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="82dp"
-        android:layout_marginEnd="81dp"
-        android:layout_marginBottom="161dp"
-        android:gravity="center"
-        android:text="USE SOCIAL NETWORKS"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+            <EditText
+                android:layout_width="280dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/curvedbutton"
+                android:hint="Email"
+                android:paddingLeft="15dp"
+                android:textColor="@color/white"
+                android:textColorHint="#D8CACA"
+                android:textSize="18sp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="87dp"
-        android:layout_marginEnd="76dp"
-        android:layout_marginBottom="110dp"
-        android:gravity="center"
-        android:text="By continiuing,I agree to the Terms of Service and Privacy Policy"
-        android:textColor="@color/lightblack"
-        android:textSize="15dp"
-        android:textStyle="bold" />
+            <EditText
+                android:layout_width="280dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/curvedbutton"
+                android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
+                android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
+                android:hint="Password"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:textColorHint="#D8CACA"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="28dp"
+                android:layout_marginTop="10dp"
+                android:text="FORGOT PASSWORD ?"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:layout_width="280dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/curvedbutton"
+                android:text="Login"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:backgroundTint="#1AA6B8" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+            android:text="USE SOCIAL NETWORKS"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.765"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="320dp"
+            android:layout_height="52dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+            android:text="By continiuing,I agree to the Terms of Service and Privacy Policy"
+            android:textColor="@color/lightblack"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.439"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.864"
+            tools:ignore="MissingConstraints" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </RelativeLayout>
