--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,132 +7,160 @@
     android:background="@color/black"
     tools:context=".PaymentsActivity">
 
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="96dp"
-        android:layout_marginEnd="77dp"
-        android:layout_marginBottom="557dp"
-        android:src="@drawable/logo" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/sign"
-        android:layout_width="137dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="201dp"
-        android:layout_marginBottom="453dp"
-        android:background="@drawable/rountbutt"
-        android:text="Sign Up"
-        android:textSize="18sp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        app:backgroundTint="#2C2E2E" />
-
-    <Button
-        android:layout_width="137dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="210dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="453dp"
-        android:background="@drawable/rountbutt"
-        android:text="Login"
-        android:textSize="18sp"
-        android:textColor="@color/lightblack"
-        android:textStyle="bold"
-        app:backgroundTint="@color/black"/>
-
-    <LinearLayout
-        android:id="@+id/layout"
-        android:layout_width="326dp"
-        android:layout_height="235dp"
-        android:layout_alignBottom="@+id/sign"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="270dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="-232dp"
-        android:background="#2C2E2E"
-        android:orientation="vertical">
-
-        <EditText
-            android:layout_width="280dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="25dp"
-            android:background="@drawable/curvedbutton"
-            android:hint="Email"
-            android:paddingLeft="15dp"
-            android:textColor="@color/white"
-            android:textColorHint="#D8CACA"
-            android:textSize="18sp" />
-
-        <EditText
-            android:layout_width="280dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/curvedbutton"
-            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
-            android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
-            android:hint="Password"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:textColorHint="#D8CACA"
-            android:textSize="18sp" />
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:src="@drawable/logo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.109"
+            tools:ignore="MissingConstraints" />
 
         <Button
-            android:layout_width="280dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/curvedbutton"
+            android:id="@+id/sign"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/rountbutt"
             android:text="Sign Up"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            app:backgroundTint="#1AA6B8" />
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:backgroundTint="#2C2E2E"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.159"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.326"
+            tools:ignore="MissingConstraints" />
 
-    </LinearLayout>
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/rountbutt"
+            android:text="Login"
+            android:textColor="@color/lightblack"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:backgroundTint="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.796"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.326"
+            tools:ignore="MissingConstraints" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="85dp"
-        android:layout_marginEnd="78dp"
-        android:layout_marginBottom="175dp"
-        android:text="USE SOCIAL NETWORKS"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        android:gravity="center"
-        android:textStyle="bold" />
+        <LinearLayout
+            android:id="@+id/layout"
+            android:layout_width="320dp"
+            android:layout_height="235dp"
+            android:layout_alignBottom="@+id/sign"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:background="#2C2E2E"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.439"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.546"
+            tools:ignore="MissingConstraints">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="87dp"
-        android:layout_marginEnd="76dp"
-        android:layout_marginBottom="119dp"
-        android:gravity="center"
-        android:text="By continiuing,I agree to the Terms of Service and Privacy Policy"
-        android:textColor="@color/lightblack"
-        android:textSize="15dp"
-        android:textStyle="bold" />
+            <EditText
+                android:layout_width="280dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/curvedbutton"
+                android:hint="Email"
+                android:paddingLeft="15dp"
+                android:textColor="@color/white"
+                android:textColorHint="#D8CACA"
+                android:textSize="18sp" />
 
+            <EditText
+                android:layout_width="280dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/curvedbutton"
+                android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
+                android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
+                android:hint="Password"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:textColorHint="#D8CACA"
+                android:textSize="18sp" />
+
+            <Button
+                android:layout_width="280dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/curvedbutton"
+                android:text="Sign Up"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:backgroundTint="#1AA6B8" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+            android:text="USE SOCIAL NETWORKS"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.748" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="328dp"
+            android:layout_height="56dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+            android:text="By continiuing,I agree to the Terms of Service and Privacy Policy"
+            android:textColor="@color/lightblack"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.481"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.848" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
